Error - No baseURL found in HTTPContext

--- a/bookstore-back/pom.xml
+++ b/bookstore-back/pom.xml
@@ -16,6 +16,8 @@
         <version.junit>4.12</version.junit>
         <version.arquillian>1.4.1.Final</version.arquillian>
         <version.arquillian.wildfly>2.1.1.Final</version.arquillian.wildfly>
+        <version.arquillian.rest>1.0.0.Alpha4</version.arquillian.rest>
+        <version.resteasy>3.6.3.Final</version.resteasy>
         <!--<version.shrinkwrap>1.2.6</version.shrinkwrap>-->
         <!-- Plugins -->
         <version.assembly.plugin>3.1.1</version.assembly.plugin>
@@ -66,11 +68,31 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>RELEASE</version>
+            <scope>test</scope> <!-- this will enable the test class to be automatically generated under test directory -->
+        </dependency>
+        <!-- For ArquillianResteasyResource -->
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-rest-client-api</artifactId>
+            <version>${version.arquillian.rest}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.arquillian.extension</groupId>
+            <artifactId>arquillian-rest-client-impl-3x</artifactId>
+            <version>${version.arquillian.rest}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jackson-provider</artifactId>
+            <version>${version.resteasy}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
     <build>
-        <!-- add finalName so that bookstore-back is created instead of bookstore-back-1.0-->
+        <!-- add finalName so that bookstore-back is created instead of bookstore-back-1.0 -->
         <finalName>bookstore-back</finalName>
         <plugins>
             <plugin>
